--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 [
   {
     "title":"Principal",
-    "drawable":"",
-    "submenu":"Other",
+    "drawable":"ic_m2.png",
+    "submenu":"Clientes",
     "iap":false,
     "tabs":[
       {
@@ -17,8 +17,8 @@
   },
   {
     "title":"Central do Assinante",
-    "drawable":"",
-    "submenu":"Other",
+    "drawable":"ic_account_box.png",
+    "submenu":"Clientes",
     "iap":false,
     "tabs":[
       {
@@ -33,8 +33,8 @@
   },
   {
     "title":"RádioWeb Cidade FM",
-    "drawable":"",
-    "submenu":"",
+    "drawable":"ic_radio.png",
+    "submenu":"Entretenimento",
     "iap":false,
     "tabs":[
       {
@@ -48,8 +48,8 @@
   },
   {
     "title":"GLOOB HD",
-    "drawable":"",
-    "submenu":"",
+    "drawable":"ic_personal_video.png",
+    "submenu":"Entretenimento",
     "iap":false,
     "tabs":[
       {
