--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 [
   {
     "title":"Principal",
-    "drawable":"res/ic_m2.png",
+    "drawable":"/res/drawable-hdpi/ic_m2.png",
     "submenu":"Clientes",
     "iap":false,
     "tabs":[
