--- a/config.json
+++ b/config.json
@@ -1,4 +1,43 @@
 [
+    {
+    "title":"Wordpress Blogs",
+    "drawable":"",
+    "submenu":"",
+    "iap":false,
+    "tabs":[
+      {
+        "title":"Recent Posts",
+        "provider":"wordpress",
+        "arguments":[
+          "https://meuphilim.000webhostapp.com/"
+        ]
+      },
+      {
+        "title":"Themes",
+        "provider":"wordpress",
+        "arguments":[
+          "br.wordpress.com",
+          "produtos"
+        ]
+      },
+      {
+        "title":"Security",
+        "provider":"wordpress",
+        "arguments":[
+          "en.blog.wordpress.com",
+          "security"
+        ]
+      },
+      {
+        "title":"Events",
+        "provider":"wordpress",
+        "arguments":[
+          "en.blog.wordpress.com",
+          "events"
+        ]
+      }
+    ]
+  },
   {
     "title":"Principal",
     "drawable":"ic_m2",
