--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
         "title":"Recent Posts",
         "provider":"wordpress",
         "arguments":[
-          "meuphilim.000webhostapp.com"
+          "m2telecomunicacao.wordpress.com"
         ]
       }
     ]
