--- a/config.json
+++ b/config.json
@@ -43,10 +43,10 @@
     "iap":false,
     "tabs":[
       {
-        "title":"GLOOB HD",
+        "title":"TV Brasil",
         "provider":"stream",
         "arguments":[
-          "http://apk.goo.bo:8081/live/17/playlist.m3u8"
+          "http://slrp.sambavideos.sambatech.com/liveevent/acerpTvEscolaABR_1f9a5d00db56b3c3020b6ac3dd693e12/livestream3/playlist.m3u8"
         ]
       }
     ]
